--- a/main.css
+++ b/main.css
@@ -35,6 +35,8 @@ header a {
     cursor: pointer;
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
+    transition: background-color 0.3s;
+    transition: margin-right 1s ease;
   }
 
   .about__image {
@@ -70,7 +72,99 @@ header a {
     border-radius: 20px;
     padding: 20px 25px;
     margin-top: 20px;
+    transition: margin-right 1s ease;
+    
   }
   .about__info {
     max-width: 550px;
   }
+  .form__container {
+    width: 550px;
+  }
+  .form{
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+  }
+  .form h1 {
+    font-size: 48px;
+  }
+  .form p{
+    font-size: 18px;
+    opacity: 0.65;
+  }
+  .form__group{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  .form form{
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px; /*отступ внутри элемента от его границ*/
+  }
+  .form label{
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 15px; /*отступ снизу*/
+  }
+  .form input{
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0px 20px 0px 20px;
+    border-radius: 15px;
+    border: none;
+    outline: none;/*убирает появляющуюся границу при наведении мышки*/
+  }
+  .form select{
+    font-size: 18px;/*размер текста*/
+    color: #213053;/*цвет текста*/
+    height: 60px;/*высота*/
+    padding: 0px 20px 0px 20px;/*отступы*/
+    border-radius: 15px;/*закругление углов*/
+    border: none;/*наличие границ*/
+    appearance: none; /*убирает галочку в выпадающем списке*/
+  }
+  .form__submit{
+    font-size: 18px; /*размер текста*/
+    font-weight: 600px; /*толщина текста*/
+    transition: margin-right 1s ease;
+  
+  }
+  button:hover{
+    background-color: #f6980c;
+  }
+footer{
+  margin: 90px 20px 90px 20px;
+  font-weight: 16px;
+}
+.footer__container{
+  display: flex;
+  justify-content: center;
+} 
+.footer_copyright{
+  text-align: center;
+  margin-top: 40px;
+  opacity: 0.5;
+}
+.footer__group{
+  padding-right: 80px;
+}
+.footer__group h3{
+  font-size: 16px;
+  opacity: 0.7;
+  padding-bottom: 30px;
+}
+.footer__links{
+  display: flex;
+  flex-direction: column;
+}
+.footer__links a{
+  padding-bottom: 15px;
+}
